force-app/main/default/objects/vaultc1__c/vaultc1__c.object-meta.xml
<CustomObject>
    <label>vaultc1</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vaultc1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>