force-app/main/default/objects/vaultc1__c/fields/checkbox2__c.field-meta.xml
<CustomField>
    <fullName>checkbox2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox2</label>
    <type>Checkbox</type>
</CustomField>