force-app/main/default/objects/vaultc1__c/fields/checkbox3__c.field-meta.xml
<CustomField>
    <fullName>checkbox3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox3</label>
    <type>Checkbox</type>
</CustomField>