force-app/main/default/objects/vaultc1__c/fields/checkbox5__c.field-meta.xml
<CustomField>
    <fullName>checkbox5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox5</label>
    <type>Checkbox</type>
</CustomField>