force-app/main/default/objects/vaultc1__c/fields/dateTime1__c.field-meta.xml
<CustomField>
    <fullName>dateTime1__c</fullName>
    <label>Date/Time1</label>
    <type>DateTime</type>
</CustomField>