force-app/main/default/objects/vaultc1__c/fields/email1__c.field-meta.xml
<CustomField>
    <fullName>email1__c</fullName>
    <label>Email1</label>
    <type>Email</type>
</CustomField>