force-app/main/default/objects/vaultc1__c/fields/email2__c.field-meta.xml
<CustomField>
    <fullName>email2__c</fullName>
    <label>Email2</label>
    <type>Email</type>
</CustomField>