force-app/main/default/objects/vaultc1__c/fields/email8__c.field-meta.xml
<CustomField>
    <fullName>email8__c</fullName>
    <label>Email8</label>
    <type>Email</type>
</CustomField>