force-app/main/default/objects/vaultc1__c/fields/longTextArea2__c.field-meta.xml
<CustomField>
    <fullName>longTextArea2__c</fullName>
    <label>LongTextArea2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>