force-app/main/default/objects/vaultc1__c/fields/number15__c.field-meta.xml
<CustomField>
    <fullName>number15__c</fullName>
    <label>Number15</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>