force-app/main/default/objects/vaultc1__c/fields/number17__c.field-meta.xml
<CustomField>
    <fullName>number17__c</fullName>
    <label>Number17</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>