force-app/main/default/objects/vaultc1__c/fields/number29__c.field-meta.xml
<CustomField>
    <fullName>number29__c</fullName>
    <label>Number29</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>