force-app/main/default/objects/vaultc1__c/fields/percent5__c.field-meta.xml
<CustomField>
    <fullName>percent5__c</fullName>
    <label>Percent5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>