force-app/main/default/objects/vaultc1__c/fields/percent6__c.field-meta.xml
<CustomField>
    <fullName>percent6__c</fullName>
    <label>Percent6</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>