force-app/main/default/objects/vaultc1__c/fields/percent8__c.field-meta.xml
<CustomField>
    <fullName>percent8__c</fullName>
    <label>Percent8</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>