force-app/main/default/objects/vaultc1__c/fields/phone1__c.field-meta.xml
<CustomField>
    <fullName>phone1__c</fullName>
    <label>Phone1</label>
    <type>Phone</type>
</CustomField>