force-app/main/default/objects/vaultc1__c/fields/phone2__c.field-meta.xml
<CustomField>
    <fullName>phone2__c</fullName>
    <label>Phone2</label>
    <type>Phone</type>
</CustomField>