force-app/main/default/objects/vaultc1__c/fields/phone3__c.field-meta.xml
<CustomField>
    <fullName>phone3__c</fullName>
    <label>Phone3</label>
    <type>Phone</type>
</CustomField>