force-app/main/default/objects/vaultc1__c/fields/richtextArea1__c.field-meta.xml
<CustomField>
    <fullName>richtextArea1__c</fullName>
    <label>richTextArea1</label>
    <type>TextArea</type>
</CustomField>