force-app/main/default/objects/vaultc1__c/fields/text10__c.field-meta.xml
<CustomField>
    <fullName>text10__c</fullName>
    <label>Text10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>