force-app/main/default/objects/vaultc1__c/fields/text19__c.field-meta.xml
<CustomField>
    <fullName>text19__c</fullName>
    <label>Text19</label>
    <length>255</length>
    <type>Text</type>
</CustomField>