force-app/main/default/objects/vaultc1__c/fields/text1__c.field-meta.xml
<CustomField>
    <fullName>text1__c</fullName>
    <label>Text1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>