force-app/main/default/objects/vaultc1__c/fields/url5__c.field-meta.xml
<CustomField>
    <fullName>url5__c</fullName>
    <label>URL5</label>
    <type>Url</type>
</CustomField>