force-app/main/default/objects/vaultc1__c/fields/url9__c.field-meta.xml
<CustomField>
    <fullName>url9__c</fullName>
    <label>URL9</label>
    <type>Url</type>
</CustomField>