force-app/main/default/objects/vaultc1__c/fields/vaultp1__c.field-meta.xml
<CustomField>
    <fullName>vaultp1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>vaultp1</label>
    <referenceTo>vaultp1__c</referenceTo>
    <relationshipName>vaultc1s</relationshipName>
    <type>Lookup</type>
</CustomField>